--- a/rust/win_bindings/Cargo.toml
+++ b/rust/win_bindings/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust"
+name = "win_bindings"
 version = "0.1.0"
 authors = ["Nihal Kenkre <nihal.kenkre@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-win_bindings = {path = "win_bindings" }
+windows = "0.9"
+
+[build-dependencies]
 windows = "0.9"
