adding vulkan for display

--- a/c/.vscode/tasks.json
+++ b/c/.vscode/tasks.json
@@ -14,12 +14,15 @@
           "/DWIN32_LEAN_AND_MEAN",
           "/DWIN32",
           "/D_CRT_SECURE_NO_WARNINGS",
+          "/DVK_USE_PLATFORM_WIN32_KHR",
+          "/I${env:VULKAN_SDK}/Include",
           "/I${workspaceFolder}/src",
           "/MDd",
           "/W3",
           "/Z7",
           "/MP",
           "src/main.c",
+          "src/vulkan.c",
           "Shlwapi.lib",
           "kernel32.lib",
           "user32.lib",
@@ -31,9 +34,11 @@
           "uuid.lib",
           "comdlg32.lib",
           "advapi32.lib",
+          "vulkan-1.lib",
           "/Fo${workspaceFolder}/build32/vscode/debug/",
           "/Fe${workspaceFolder}/build32/vscode/debug/chip8.exe",
           "/link",
+          "/LIBPATH:${env:VULKAN_SDK}/Lib32",
           "/DEBUG:FASTLINK",
           "/MACHINE:X86",
           "/SUBSYSTEM:WINDOWS",
@@ -60,6 +65,8 @@
           "/DWIN32_LEAN_AND_MEAN",
           "/DWIN32",
           "/D_CRT_SECURE_NO_WARNINGS",
+          "/DVK_USE_PLATFORM_WIN32_KHR",
+          "/I${env:VULKAN_SDK}/Include",
           "/I${workspaceFolder}/src",
           "/MD",
           "/W3",
@@ -77,9 +84,11 @@
           "uuid.lib",
           "comdlg32.lib",
           "advapi32.lib",
+          "vulkan-1.lib",
           "/Fo${workspaceFolder}/build32/vscode/release/",
           "/Fe${workspaceFolder}/build32/vscode/release/chip8.exe",
           "/link",
+          "/LIBPATH:${env:VULKAN_SDK}/Lib32",
           "/MACHINE:X86",
           "/SUBSYSTEM:WINDOWS",
           "/incremental"
@@ -106,12 +115,15 @@
           "/DWIN32_LEAN_AND_MEAN",
           "/DWIN32",
           "/D_CRT_SECURE_NO_WARNINGS",
+          "/DVK_USE_PLATFORM_WIN32_KHR",
+          "/I${env:VULKAN_SDK}/Include",
           "/I${workspaceFolder}/src",
           "/MDd",
           "/W3",
           "/Z7",
           "/MP",
           "src/main.c",
+          "src/vulkan.c",
           "Shlwapi.lib",
           "kernel32.lib",
           "user32.lib",
@@ -123,9 +135,11 @@
           "uuid.lib",
           "comdlg32.lib",
           "advapi32.lib",
+          "vulkan-1.lib",
           "/Fo${workspaceFolder}/build64/vscode/debug/",
           "/Fe${workspaceFolder}/build64/vscode/debug/chip8.exe",
           "/link",
+          "/LIBPATH:${env:VULKAN_SDK}/Lib",
           "/DEBUG:FASTLINK",
           "/MACHINE:X64",
           "/SUBSYSTEM:WINDOWS",
@@ -158,6 +172,7 @@
           "/Ox",
           "/MP",
           "src/main.c",
+          "src/vulkan.c",
           "Shlwapi.lib",
           "kernel32.lib",
           "user32.lib",
@@ -173,6 +188,7 @@
           "/Fo${workspaceFolder}/build64/vscode/release/",
           "/Fe${workspaceFolder}/build64/vscode/release/chip.exe",
           "/link",
+          "/LIBPATH:${env:VULKAN_SDK}/Lib",
           "/MACHINE:X64",
           "/SUBSYSTEM:WINDOWS",
           "/incremental"
